lustre/tests/sanity-lfsck.sh
@@ -2493,6 +2493,67 @@ test_18f() {
 }
 run_test 18f "Skip the failed OST(s) when handle orphan OST-objects"
 
+test_18g() {
+	echo "#####"
+	echo "The target MDT-object is lost, but related OI mapping is there"
+	echo "The LFSCK should recreate the lost MDT-object without affected"
+	echo "by the stale OI mapping."
+	echo "#####"
+
+	check_mount_and_prep
+	$LFS mkdir -i 0 $DIR/$tdir/a1
+	$LFS setstripe -c -1 -i 0 -S 1M $DIR/$tdir/a1
+	dd if=/dev/zero of=$DIR/$tdir/a1/f1 bs=1M count=$OSTCOUNT
+	local fid1=$($LFS path2fid $DIR/$tdir/a1/f1)
+	echo ${fid1}
+	$LFS getstripe $DIR/$tdir/a1/f1
+	cancel_lru_locks osc
+
+	echo "Inject failure to simulate lost MDT-object but keep OI mapping"
+	#define OBD_FAIL_LFSCK_LOST_MDTOBJ2	0x162e
+	do_facet mds1 $LCTL set_param fail_loc=0x162e
+	rm -f $DIR/$tdir/a1/f1
+
+	do_facet mds1 $LCTL set_param fail_loc=0
+	cancel_lru_locks mdc
+	cancel_lru_locks osc
+
+	echo "Trigger layout LFSCK on all devices to find out orphan OST-object"
+	$START_LAYOUT -r -o || error "(1) Fail to start LFSCK for layout!"
+
+	for k in $(seq $MDSCOUNT); do
+		# The LFSCK status query internal is 30 seconds. For the case
+		# of some LFSCK_NOTIFY RPCs failure/lost, we will wait enough
+		# time to guarantee the status sync up.
+		wait_update_facet mds${k} "$LCTL get_param -n \
+			mdd.$(facet_svc mds${k}).lfsck_layout |
+			awk '/^status/ { print \\\$2 }'" "completed" $LTIME ||
+			error "(2) MDS${k} is not the expected 'completed'"
+	done
+
+	for k in $(seq $OSTCOUNT); do
+		local cur_status=$(do_facet ost${k} $LCTL get_param -n \
+				obdfilter.$(facet_svc ost${k}).lfsck_layout |
+				awk '/^status/ { print $2 }')
+		[ "$cur_status" == "completed" ] ||
+		error "(3) OST${k} Expect 'completed', but got '$cur_status'"
+	done
+
+	local repaired=$(do_facet mds1 $LCTL get_param -n \
+			 mdd.$(facet_svc mds1).lfsck_layout |
+			 awk '/^repaired_orphan/ { print $2 }')
+	[ $repaired -eq $OSTCOUNT ] ||
+		error "(4) Expect $OSTCOUNT fixed, but got: $repaired"
+
+	echo "Move the files from ./lustre/lost+found/MDTxxxx to namespace"
+	mv $MOUNT/.lustre/lost+found/MDT0000/${fid1}-R-0 $DIR/$tdir/a1/f1 ||
+	error "(5) Fail to move $MOUNT/.lustre/lost+found/MDT0000/${fid1}-R-0"
+
+	$LFS path2fid $DIR/$tdir/a1/f1
+	$LFS getstripe $DIR/$tdir/a1/f1
+}
+run_test 18g "Find out orphan OST-object and repair it (7)"
+
 $LCTL set_param debug=-cache > /dev/null
 
 test_19a() {
